docs: complete v3 project research